"REGISTER" = "Register";
"CREATE_NOTE" = "Create note";
"DONE" = "Done";
"ADD_PHOTO" = "Add photo";
"CLOSE" = "Close";
"EXAMPLE" = "Example";
"SELECT" = "Select";
"UNSELECT" = "Unselect";
"MY_NOTES" = "My notes";
"CONFIRM" = "Confirm";
"NEW_TASK" = "New task";
"LOGIN" = "Login";
"SIGNIN" = "Sign in";
"SKIP_REGISTRATION" = "Skip registration";
"LOGIN:" = "Login:";
"MAIL:" = "Mail:";
"PASSWORD:" = "Password:";
"CONFIRM_PASSWORD:" = "Confirm password";
"ERROR" = "Error";
"OK" = "OK";
"LOGIN/MAIL:" = "Login/Mail:";
"CANCEL" = "Cancel";
"NEW_PROJECT" = "New project";
"ADD_TO_FAVORITE" = "Add to favorite";
"FAVORITE" = "Favorite";
"PROJECTS" = "Projects";
"ADD_CATEGORY" = "Add category";
"ADD_TASK" = "Add task";
"TODAY" = "Today";
"CREATE_CATEGORY" = "Create category";
"WRITE_NAME" = "Write name";
"NAME" = "Name";
"CREATE" = "Create";
"CATEGORIES:" = "Categories";
"DELETE_PROJECT" = "Delete project";
"DELETE_ALL_CATEGORIES" = "Delete all categories";
"ACCOUNT" = "Account";
"SUPPORT" = "Support";
"DARK_THEME" = "Dark theme";
"SETTINGS" = "Settings";
"LOGOUT" = "Logout";
"PINCODE:" = "Pincode:";
"CHANGE_PINCODE:" = "Change pincode";
"DELETE_ACCOUNT" = "Delete account";
"ARE_YOU_SURE_?" = "Are you sure?";
"RENAME_PROJECT" = "Rename project";
"NEW_NAME" = "New name";
"RENAME_SECTION" = "Rename section";
"DELETE_SECTION" = "Delete section";
"SHOW_FINISHED_TASKS" = "Show finished tasks";
"HIDE_FINISHED_TASKS" = "Hide finished tasks";
"CHANGE_PROJECT_COLOR" = "Change project color";
"DELETE_DATE" = "Delete date";
"SET_DATE" = "Set date";
"SET_TIME" = "Set time";
"WRITE_IN_SUPPORT" = "Write in support";
"MAIL_SERVICES_ARE_NOT_AVAILABLE" = "Mail serivce are not available";
"THE_LETTER_WAS_SAVED!" = "The letter was saved!";
"THE_LETTER_WAS_SENT!" = "The letter was sent!";
"FAILED_TO_SEND_THE_LETTER,TRY_AGAIN!" = "Failed to send the letter, try again!";
"UNKWOWN_FEATURE" = "Unknown feature";
"FORGOT_PASSWORD" = "Forgot password";
"REMOVE_FROM_FAVORITES" = "Remove from favorites";
"SKIP" = "Skip";
"BACK" = "Back";
"NEXT" = "Next";
"GET_STARTED" = "Get started";
"CALENDAR" = "Calendar";
"OPEN_CALENDAR" = "Open calendar";
"HIDE_CALENDAR" = "Hide calendar";
"PRODUCTIVITY" = "Productivity";
"FINISH_ANY_TASK" = "Finish any task";
"COUNT_OF_FINISHED_TASKS" = "Count of finished tasks";
"THE_PINCODE_IS_WRONG,_TRY_AGAIN!" = "The pincode is wrong, try again!";
"THANK_YOU_FOR_DOWNLOADING" = "Thank you for downloading";
"CREATE_AND_SAVE_TASKS,_WRITE_NOTES,_CHECK_PRODUCTIVITY_ON_CHARTS" = "Create and save tasks, write notes, check productivity on charts";
"USE_DIFFERENT_PROJECTS_TO_MANAGE_YOUR_TASKS_AND_KEEP_TRACK_THEIR_ON_CALENDAR" = "Use different projects to manage your tasks and keep track their on calendar";
"LOGIN_IN_ACCOUNT_OR_SKIP_WITHOUT_REGISTRATION" = "Login in account or skip without registration";
"DESCRIPTION" = "Description";
"TITLE" = "Title";
"MAIL" = "Mail";
"PASSWORD" = "Password";
"CONFIRM_PASSWORD" = "Confirm password";
"WRITE_LOGIN_OR_MAIL" = "Write login or mail";
"LENGTH_IS_4_SYMBOL" = "Length is 4 symbol";
"WRITE_ANYTHINK_HERE" = "Write anything here";
"CREATE_TASK" = "Create task";
"WELCOME" = "Welcome";
"TAKE_PHOTO" = "Take photo";
"CHOOSE_FROM_PHOTO_GALLERY" = "Choose from photo album";
"INCOMING" = "Incoming";
"COLOR" = "Color";
"OVERDUE" = "Overdue";
"FAILED_GET_IMAGE" = "Failed to get image!";
"FAILED_TO_SAVE_IMAGE" = "Failed to save image";
"FAILED_TO_CHANGE" = "Failed to change";
"FAILED_TO_DELETE_IMAGE" = "Failed to delete image";
"FAILED_CREATE_NOTE" = "Failed to create note";
"FAILED_DELETE_NOTE" = "Failed to delete note";
"FAILED_LOAD_DATA" = "Failed to load data";
"NO_DATA_FOR_THIS_DATES" = "No data for this dates";
"FAILED_TO_GET_DATA_FOR_THIS_DATES" = "Failed to get data for this dates";
"FAILED_GET_TASKS_AT_DAY" = "Failed to get tasks at day";
"DELETE_TASK" = "Delete task";
"CREATE_PROJECT_ERROR_TEXT" = "You cant create project with this name, try another one";
"DELETE_CURRENT_PHOTO" = "Delete current photo";
"INCOMING_PROJECT_FOUND_ERROR" = "Incoming project isnt found, please write in support!";
"ALBUM_OPEN_ERROR" = "We were unable to load your album groups. Sorry!";
"ASK_SETTINGS_MESSAGE" = "You can enable access in Privacy Settings";
"CAMERA_ACCESS_IS_DENIED" = "Camera access is denied";
"CLOSE_IMAGE" = "Close image";
"NO_TASKS_FOR_THIS_DATE" = "No tasks for this date";
